--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,6 +3,103 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "628d879f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Phase 2: Build Hierarchy (multi-month safe, no summary)\n",
+    "# -------------------------------------------------------\n",
+    "def phase_two(input_file=\"phase1_enriched.xlsx\", output_file=\"hierarchy_report.xlsx\"):\n",
+    "    enriched = pd.read_excel(input_file, sheet_name=\"Enriched\")\n",
+    "    enriched.columns = enriched.columns.str.strip()\n",
+    "\n",
+    "    df_lookup = enriched.set_index(\"Employee ID\")\n",
+    "    hierarchy = []\n",
+    "    exceptions = []\n",
+    "\n",
+    "    def recurse(manager_id, path):\n",
+    "        \"\"\"Walk down the hierarchy from a manager (keep all months).\"\"\"\n",
+    "        reports = enriched[enriched[\"Reporting Manager ID\"] == manager_id]\n",
+    "\n",
+    "        for _, row in reports.iterrows():\n",
+    "            record = path.copy()\n",
+    "\n",
+    "            record.update({\n",
+    "                \"Manager ID\": manager_id,\n",
+    "                \"Manager Name\": row[\"Reporting Manager Name\"],\n",
+    "                \"Manager GCB\": df_lookup.loc[manager_id, \"Global Career Band\"]\n",
+    "                if manager_id in df_lookup.index else None,\n",
+    "            })\n",
+    "\n",
+    "            # keep ALL row info (so each month stays in output)\n",
+    "            record.update(row.to_dict())\n",
+    "            hierarchy.append(record)\n",
+    "\n",
+    "            # recurse further down\n",
+    "            recurse(row[\"Employee ID\"], record)\n",
+    "\n",
+    "    # ----- Start from MDs -----\n",
+    "    mds = enriched[enriched[\"Global Career Band\"] == \"MD\"]\n",
+    "\n",
+    "    for _, md in mds.iterrows():\n",
+    "        md_path = {\n",
+    "            \"MD ID\": md[\"Employee ID\"],\n",
+    "            \"MD Name\": md[\"Employee Name\"],\n",
+    "        }\n",
+    "\n",
+    "        # add MD itself for each month row\n",
+    "        row_dict = md.to_dict()\n",
+    "        row_dict.update({\n",
+    "            \"MD ID\": md[\"Employee ID\"],\n",
+    "            \"MD Name\": md[\"Employee Name\"],\n",
+    "            \"Manager ID\": None,\n",
+    "            \"Manager Name\": None,\n",
+    "            \"Manager GCB\": None,\n",
+    "        })\n",
+    "        hierarchy.append(row_dict)\n",
+    "\n",
+    "        recurse(md[\"Employee ID\"], md_path)\n",
+    "\n",
+    "    # ----- Exceptions: missing managers (per row) -----\n",
+    "    def find_first_missing_manager(emp_row):\n",
+    "        \"\"\"Check manager chain upwards until MD, return first missing manager if any.\"\"\"\n",
+    "        current_mgr_id = emp_row[\"Reporting Manager ID\"]\n",
+    "        while pd.notna(current_mgr_id):\n",
+    "            if current_mgr_id in df_lookup.index:\n",
+    "                mgr_row = df_lookup.loc[current_mgr_id]\n",
+    "                if mgr_row[\"Global Career Band\"] == \"MD\":\n",
+    "                    return None  # chain complete\n",
+    "                current_mgr_id = mgr_row[\"Reporting Manager ID\"]\n",
+    "            else:\n",
+    "                return current_mgr_id  # first missing manager\n",
+    "        return None\n",
+    "\n",
+    "    for _, row in enriched.iterrows():\n",
+    "        missing_mgr = find_first_missing_manager(row)\n",
+    "        if missing_mgr:\n",
+    "            row_dict = row.to_dict()\n",
+    "            row_dict[\"Missing Manager ID\"] = missing_mgr\n",
+    "            row_dict[\"Missing Manager Name\"] = row_dict.get(\"Reporting Manager Name\", \"\")\n",
+    "            exceptions.append(row_dict)\n",
+    "\n",
+    "    # ----- Write outputs -----\n",
+    "    hierarchy_df = pd.DataFrame(hierarchy)\n",
+    "    exceptions_df = pd.DataFrame(exceptions)\n",
+    "\n",
+    "    with pd.ExcelWriter(output_file, engine=\"openpyxl\") as writer:\n",
+    "        hierarchy_df.to_excel(writer, index=False, sheet_name=\"Hierarchy Report\")\n",
+    "        if not exceptions_df.empty:\n",
+    "            exceptions_df.to_excel(writer, index=False, sheet_name=\"Missing Managers\")\n",
+    "\n",
+    "    print(f\"✅ Phase 2 completed → {output_file}\")\n",
+    "    return hierarchy_df, exceptions_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a7b443d2",
    "metadata": {},
    "outputs": [],
