--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,115 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "628d879f",
+   "id": "640312c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def enrich_employee_data(monthly_file_path, gha_file_path):\n",
+    "    # Load monthly employee data\n",
+    "    monthly_df = pd.read_excel(monthly_file_path)\n",
+    "    gha_df = pd.read_excel(gha_file_path, sheet_name=\"Headcount – Employee Detail\")\n",
+    "\n",
+    "    # Standardize column names\n",
+    "    monthly_df.columns = monthly_df.columns.str.strip().str.lower()\n",
+    "    gha_df.columns = gha_df.columns.str.strip().str.lower()\n",
+    "\n",
+    "    # Merge GHA info into monthly data\n",
+    "    enriched_df = monthly_df.merge(\n",
+    "        gha_df[['employee id', 'gcb', 'bf levels', 'email', 'manager id']],\n",
+    "        on='employee id',\n",
+    "        how='left',\n",
+    "        suffixes=('', '_gha')\n",
+    "    )\n",
+    "\n",
+    "    # Identify missing employee info\n",
+    "    missing_info_df = enriched_df[enriched_df['gcb'].isna()].copy()\n",
+    "    missing_info_df['missing_reason'] = 'Employee not found in GHA'\n",
+    "\n",
+    "    # Check for missing manager info\n",
+    "    enriched_df['manager_missing'] = ~enriched_df['manager id'].isin(gha_df['employee id'])\n",
+    "    manager_missing_df = enriched_df[enriched_df['manager_missing']].copy()\n",
+    "    manager_missing_df['missing_reason'] = 'Manager not found in GHA'\n",
+    "\n",
+    "    # Combine all missing info\n",
+    "    missing_combined_df = pd.concat([missing_info_df, manager_missing_df], ignore_index=True)\n",
+    "\n",
+    "    # Save outputs\n",
+    "    with pd.ExcelWriter(\"phase1_enriched.xlsx\", engine='openpyxl') as writer:\n",
+    "        enriched_df.to_excel(writer, sheet_name=\"Enriched\", index=False)\n",
+    "        missing_combined_df.to_excel(writer, sheet_name=\"Missing Info\", index=False)\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "def build_hierarchy(enriched_file_path):\n",
+    "    df = pd.read_excel(enriched_file_path, sheet_name=\"Enriched\")\n",
+    "    df.columns = df.columns.str.strip().str.lower()\n",
+    "\n",
+    "    # Create lookup dictionary\n",
+    "    employee_lookup = df.set_index('employee id').to_dict('index')\n",
+    "\n",
+    "    hierarchy = []\n",
+    "    missing_managers = []\n",
+    "\n",
+    "    def walk_hierarchy(manager_id, md_info):\n",
+    "        for _, row in df[df['manager id'] == manager_id].iterrows():\n",
+    "            emp_id = row['employee id']\n",
+    "            record = row.to_dict()\n",
+    "            record.update({\n",
+    "                'manager name': employee_lookup.get(manager_id, {}).get('employee name', 'Unknown'),\n",
+    "                'manager gcb': employee_lookup.get(manager_id, {}).get('gcb', 'Unknown'),\n",
+    "                'md id': md_info['employee id'],\n",
+    "                'md name': md_info['employee name']\n",
+    "            })\n",
+    "            hierarchy.append(record)\n",
+    "            walk_hierarchy(emp_id, md_info)\n",
+    "\n",
+    "    # Start from MDs\n",
+    "    md_df = df[df['gcb'] == 'MD']\n",
+    "    for _, md in md_df.iterrows():\n",
+    "        md_record = md.to_dict()\n",
+    "        hierarchy.append(md_record)\n",
+    "        walk_hierarchy(md['employee id'], md_record)\n",
+    "\n",
+    "    # Handle missing managers\n",
+    "    for _, row in df.iterrows():\n",
+    "        current_id = row['employee id']\n",
+    "        manager_id = row['manager id']\n",
+    "        while manager_id in employee_lookup:\n",
+    "            if employee_lookup[manager_id]['gcb'] == 'MD':\n",
+    "                break\n",
+    "            manager_id = employee_lookup[manager_id]['manager id']\n",
+    "        else:\n",
+    "            missing_managers.append(row)\n",
+    "\n",
+    "    # Save outputs\n",
+    "    hierarchy_df = pd.DataFrame(hierarchy)\n",
+    "    missing_df = pd.DataFrame(missing_managers)\n",
+    "\n",
+    "    with pd.ExcelWriter(\"hierarchy_report.xlsx\", engine='openpyxl') as writer:\n",
+    "        hierarchy_df.to_excel(writer, sheet_name=\"Hierarchy Report\", index=False)\n",
+    "        missing_df.to_excel(writer, sheet_name=\"Missing Managers\", index=False)# Import the functions (if they are in another file, use: from filename import enrich_employee_data, build_hierarchy)\n",
+    "\n",
+    "# Step 1: Call Phase 1 – Enrichment\n",
+    "monthly_file = \"monthly_employee.xlsx\"       # Replace with your actual file name\n",
+    "gha_master_file = \"gha_master.xlsx\"          # Replace with your actual file name\n",
+    "\n",
+    "enrich_employee_data(monthly_file, gha_master_file)\n",
+    "\n",
+    "# Step 2: Call Phase 2 – Hierarchy Build\n",
+    "enriched_file = \"phase1_enriched.xlsx\"       # This is the output from Phase 1\n",
+    "\n",
+    "build_hierarchy(enriched_file)\n",
+    "        \n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e2baa1e",
    "metadata": {},
    "outputs": [],
    "source": [
