--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -9,9 +9,9 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "def enrich_employee_data(monthly_file_path, gha_file_path):\n",
-    "    # Load monthly employee data\n",
-    "    monthly_df = pd.read_excel(monthly_file_path)\n",
+    "def enrich_employee_data(monthly_csv_path, gha_file_path):\n",
+    "    # Load monthly employee data from CSV\n",
+    "    monthly_df = pd.read_csv(monthly_csv_path)\n",
     "    gha_df = pd.read_excel(gha_file_path, sheet_name=\"Headcount – Employee Detail\")\n",
     "\n",
     "    # Standardize column names\n",
@@ -23,18 +23,19 @@
     "\n",
     "    # Merge GHA info into monthly data\n",
     "    enriched_df = monthly_df.merge(\n",
-    "        gha_df[['employee id', 'employee name', 'manager id', 'gcb', 'bf levels', 'email']],\n",
+    "        gha_df[['employee id', 'employee name', 'entity manager employee id', 'global career band', 'bf levels', 'email']],\n",
     "        on='employee id',\n",
     "        how='left',\n",
     "        suffixes=('', '_gha')\n",
     "    )\n",
     "\n",
     "    # Identify missing employee info\n",
-    "    missing_employee_df = enriched_df[enriched_df['gcb'].isna()].copy()\n",
+    "    missing_employee_df = enriched_df[enriched_df['global career band'].isna()].copy()\n",
     "    missing_employee_df['missing_reason'] = 'Employee not found in GHA'\n",
     "\n",
-    "    # Check for missing manager info\n",
-    "    enriched_df['manager_missing'] = ~enriched_df['manager id'].isin(gha_df['employee id'])\n",
+    "    # Check for missing manager info using GHA lookup\n",
+    "    gha_ids = set(gha_df['employee id'])\n",
+    "    enriched_df['manager_missing'] = ~enriched_df['entity manager employee id'].isin(gha_ids)\n",
     "    missing_manager_df = enriched_df[enriched_df['manager_missing']].copy()\n",
     "    missing_manager_df['missing_reason'] = 'Manager not found in GHA'\n",
     "\n",
@@ -51,7 +52,7 @@
     "    df = pd.read_excel(enriched_file_path, sheet_name=\"Enriched\")\n",
     "    df.columns = df.columns.str.strip().str.lower()\n",
     "\n",
-    "    # Build lookup from GHA data (deduplicated)\n",
+    "    # Build lookup from deduplicated employee records\n",
     "    gha_df = df.drop_duplicates(subset='employee id', keep='last')\n",
     "    employee_lookup = gha_df.set_index('employee id').to_dict('index')\n",
     "\n",
@@ -60,13 +61,13 @@
     "\n",
     "    def walk_hierarchy(manager_id, md_info):\n",
     "        # Find employees reporting to this manager\n",
-    "        subordinates = df[df['manager id'] == manager_id]\n",
+    "        subordinates = df[df['entity manager employee id'] == manager_id]\n",
     "        for _, row in subordinates.iterrows():\n",
     "            emp_id = row['employee id']\n",
     "            record = row.to_dict()\n",
     "            record.update({\n",
     "                'manager name': employee_lookup.get(manager_id, {}).get('employee name', 'Unknown'),\n",
-    "                'manager gcb': employee_lookup.get(manager_id, {}).get('gcb', 'Unknown'),\n",
+    "                'manager band': employee_lookup.get(manager_id, {}).get('global career band', 'Unknown'),\n",
     "                'md id': md_info['employee id'],\n",
     "                'md name': md_info['employee name']\n",
     "            })\n",
@@ -74,7 +75,7 @@
     "            walk_hierarchy(emp_id, md_info)\n",
     "\n",
     "    # Start from MDs\n",
-    "    md_df = gha_df[gha_df['gcb'].str.upper() == 'MD']\n",
+    "    md_df = gha_df[gha_df['global career band'].str.upper() == 'MD']\n",
     "    for _, md in md_df.iterrows():\n",
     "        md_record = md.to_dict()\n",
     "        hierarchy.append(md_record)\n",
@@ -83,13 +84,13 @@
     "    # Handle missing manager chains\n",
     "    for _, row in df.iterrows():\n",
     "        emp_id = row['employee id']\n",
-    "        manager_id = row['manager id']\n",
+    "        manager_id = row['entity manager employee id']\n",
     "        visited = set()\n",
     "        while manager_id in employee_lookup and manager_id not in visited:\n",
     "            visited.add(manager_id)\n",
-    "            if employee_lookup[manager_id]['gcb'].upper() == 'MD':\n",
+    "            if employee_lookup[manager_id]['global career band'].upper() == 'MD':\n",
     "                break\n",
-    "            manager_id = employee_lookup[manager_id]['manager id']\n",
+    "            manager_id = employee_lookup[manager_id]['entity manager employee id']\n",
     "        else:\n",
     "            missing_managers.append(row)\n",
     "\n",
@@ -103,11 +104,11 @@
     "        \n",
     "        \n",
     "# File paths\n",
-    "monthly_file = \"monthly_employee.xlsx\"\n",
+    "monthly_csv = \"monthly_employee.csv\"\n",
     "gha_file = \"gha_master.xlsx\"\n",
     "\n",
     "# Phase 1: Enrichment\n",
-    "enrich_employee_data(monthly_file, gha_file)\n",
+    "enrich_employee_data(monthly_csv, gha_file)\n",
     "\n",
     "# Phase 2: Hierarchy Build\n",
     "build_hierarchy(\"phase1_enriched.xlsx\")"
@@ -122,92 +123,43 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Phase 2: Build Hierarchy (multi-month safe, no summary)\n",
-    "# -------------------------------------------------------\n",
-    "def phase_two(input_file=\"phase1_enriched.xlsx\", output_file=\"hierarchy_report.xlsx\"):\n",
-    "    enriched = pd.read_excel(input_file, sheet_name=\"Enriched\")\n",
-    "    enriched.columns = enriched.columns.str.strip()\n",
+    "def enrich_employee_data(monthly_csv_path, gha_file_path):\n",
+    "    # Load monthly employee data from CSV\n",
+    "    monthly_df = pd.read_csv(monthly_csv_path)\n",
+    "    gha_df = pd.read_excel(gha_file_path, sheet_name=\"Headcount – Employee Detail\")\n",
     "\n",
-    "    df_lookup = enriched.set_index(\"Employee ID\")\n",
-    "    hierarchy = []\n",
-    "    exceptions = []\n",
+    "    # Standardize column names\n",
+    "    monthly_df.columns = monthly_df.columns.str.strip().str.lower()\n",
+    "    gha_df.columns = gha_df.columns.str.strip().str.lower()\n",
     "\n",
-    "    def recurse(manager_id, path):\n",
-    "        \"\"\"Walk down the hierarchy from a manager (keep all months).\"\"\"\n",
-    "        reports = enriched[enriched[\"Reporting Manager ID\"] == manager_id]\n",
+    "    # Deduplicate GHA data by Employee ID (keep last occurrence)\n",
+    "    gha_df = gha_df.drop_duplicates(subset='employee id', keep='last')\n",
     "\n",
-    "        for _, row in reports.iterrows():\n",
-    "            record = path.copy()\n",
+    "    # Merge GHA info into monthly data\n",
+    "    enriched_df = monthly_df.merge(\n",
+    "        gha_df[['employee id', 'employee name', 'entity manager employee id', 'global career band', 'bf levels', 'email']],\n",
+    "        on='employee id',\n",
+    "        how='left',\n",
+    "        suffixes=('', '_gha')\n",
+    "    )\n",
     "\n",
-    "            record.update({\n",
-    "                \"Manager ID\": manager_id,\n",
-    "                \"Manager Name\": row[\"Reporting Manager Name\"],\n",
-    "                \"Manager GCB\": df_lookup.loc[manager_id, \"Global Career Band\"]\n",
-    "                if manager_id in df_lookup.index else None,\n",
-    "            })\n",
+    "    # Identify missing employee info\n",
+    "    missing_employee_df = enriched_df[enriched_df['global career band'].isna()].copy()\n",
+    "    missing_employee_df['missing_reason'] = 'Employee not found in GHA'\n",
     "\n",
-    "            # keep ALL row info (so each month stays in output)\n",
-    "            record.update(row.to_dict())\n",
-    "            hierarchy.append(record)\n",
+    "    # Check for missing manager info using GHA lookup\n",
+    "    gha_ids = set(gha_df['employee id'])\n",
+    "    enriched_df['manager_missing'] = ~enriched_df['entity manager employee id'].isin(gha_ids)\n",
+    "    missing_manager_df = enriched_df[enriched_df['manager_missing']].copy()\n",
+    "    missing_manager_df['missing_reason'] = 'Manager not found in GHA'\n",
     "\n",
-    "            # recurse further down\n",
-    "            recurse(row[\"Employee ID\"], record)\n",
+    "    # Combine all missing info\n",
+    "    missing_combined_df = pd.concat([missing_employee_df, missing_manager_df], ignore_index=True)\n",
     "\n",
-    "    # ----- Start from MDs -----\n",
-    "    mds = enriched[enriched[\"Global Career Band\"] == \"MD\"]\n",
-    "\n",
-    "    for _, md in mds.iterrows():\n",
-    "        md_path = {\n",
-    "            \"MD ID\": md[\"Employee ID\"],\n",
-    "            \"MD Name\": md[\"Employee Name\"],\n",
-    "        }\n",
-    "\n",
-    "        # add MD itself for each month row\n",
-    "        row_dict = md.to_dict()\n",
-    "        row_dict.update({\n",
-    "            \"MD ID\": md[\"Employee ID\"],\n",
-    "            \"MD Name\": md[\"Employee Name\"],\n",
-    "            \"Manager ID\": None,\n",
-    "            \"Manager Name\": None,\n",
-    "            \"Manager GCB\": None,\n",
-    "        })\n",
-    "        hierarchy.append(row_dict)\n",
-    "\n",
-    "        recurse(md[\"Employee ID\"], md_path)\n",
-    "\n",
-    "    # ----- Exceptions: missing managers (per row) -----\n",
-    "    def find_first_missing_manager(emp_row):\n",
-    "        \"\"\"Check manager chain upwards until MD, return first missing manager if any.\"\"\"\n",
-    "        current_mgr_id = emp_row[\"Reporting Manager ID\"]\n",
-    "        while pd.notna(current_mgr_id):\n",
-    "            if current_mgr_id in df_lookup.index:\n",
-    "                mgr_row = df_lookup.loc[current_mgr_id]\n",
-    "                if mgr_row[\"Global Career Band\"] == \"MD\":\n",
-    "                    return None  # chain complete\n",
-    "                current_mgr_id = mgr_row[\"Reporting Manager ID\"]\n",
-    "            else:\n",
-    "                return current_mgr_id  # first missing manager\n",
-    "        return None\n",
-    "\n",
-    "    for _, row in enriched.iterrows():\n",
-    "        missing_mgr = find_first_missing_manager(row)\n",
-    "        if missing_mgr:\n",
-    "            row_dict = row.to_dict()\n",
-    "            row_dict[\"Missing Manager ID\"] = missing_mgr\n",
-    "            row_dict[\"Missing Manager Name\"] = row_dict.get(\"Reporting Manager Name\", \"\")\n",
-    "            exceptions.append(row_dict)\n",
-    "\n",
-    "    # ----- Write outputs -----\n",
-    "    hierarchy_df = pd.DataFrame(hierarchy)\n",
-    "    exceptions_df = pd.DataFrame(exceptions)\n",
-    "\n",
-    "    with pd.ExcelWriter(output_file, engine=\"openpyxl\") as writer:\n",
-    "        hierarchy_df.to_excel(writer, index=False, sheet_name=\"Hierarchy Report\")\n",
-    "        if not exceptions_df.empty:\n",
-    "            exceptions_df.to_excel(writer, index=False, sheet_name=\"Missing Managers\")\n",
-    "\n",
-    "    print(f\"✅ Phase 2 completed → {output_file}\")\n",
-    "    return hierarchy_df, exceptions_df\n"
+    "    # Save outputs\n",
+    "    with pd.ExcelWriter(\"phase1_enriched.xlsx\", engine='openpyxl') as writer:\n",
+    "        enriched_df.to_excel(writer, sheet_name=\"Enriched\", index=False)\n",
+    "        missing_combined_df.to_excel(writer, sheet_name=\"Missing Info\", index=False)"
    ]
   },
   {
