--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -18,24 +18,30 @@
     "    monthly_df.columns = monthly_df.columns.str.strip().str.lower()\n",
     "    gha_df.columns = gha_df.columns.str.strip().str.lower()\n",
     "\n",
+    "    # Confirm correct column names\n",
+    "    emp_id_col = 'employee id'\n",
+    "    manager_id_col = 'entity manager employee id'\n",
+    "    band_col = 'global career band'\n",
+    "\n",
     "    # Deduplicate GHA data by Employee ID (keep last occurrence)\n",
-    "    gha_df = gha_df.drop_duplicates(subset='employee id', keep='last')\n",
+    "    gha_df = gha_df.drop_duplicates(subset=emp_id_col, keep='last')\n",
     "\n",
     "    # Merge GHA info into monthly data\n",
     "    enriched_df = monthly_df.merge(\n",
-    "        gha_df[['employee id', 'employee name', 'entity manager employee id', 'global career band', 'bf levels', 'email']],\n",
-    "        on='employee id',\n",
+    "        gha_df[[emp_id_col, 'employee name', manager_id_col, band_col, 'bf levels', 'email']],\n",
+    "        on=emp_id_col,\n",
     "        how='left',\n",
     "        suffixes=('', '_gha')\n",
     "    )\n",
     "\n",
     "    # Identify missing employee info\n",
-    "    missing_employee_df = enriched_df[enriched_df['global career band'].isna()].copy()\n",
+    "    missing_employee_df = enriched_df[enriched_df[band_col].isna()].copy()\n",
     "    missing_employee_df['missing_reason'] = 'Employee not found in GHA'\n",
     "\n",
-    "    # Check for missing manager info using GHA lookup\n",
-    "    gha_ids = set(gha_df['employee id'])\n",
-    "    enriched_df['manager_missing'] = ~enriched_df['entity manager employee id'].isin(gha_ids)\n",
+    "    # Check for missing manager info\n",
+    "    gha_ids = set(gha_df[emp_id_col])\n",
+    "    enriched_df['manager_missing'] = enriched_df[manager_id_col].apply(lambda x: pd.isna(x) or x not in gha_ids)\n",
+    "\n",
     "    missing_manager_df = enriched_df[enriched_df['manager_missing']].copy()\n",
     "    missing_manager_df['missing_reason'] = 'Manager not found in GHA'\n",
     "\n",
@@ -45,8 +51,7 @@
     "    # Save outputs\n",
     "    with pd.ExcelWriter(\"phase1_enriched.xlsx\", engine='openpyxl') as writer:\n",
     "        enriched_df.to_excel(writer, sheet_name=\"Enriched\", index=False)\n",
-    "        missing_combined_df.to_excel(writer, sheet_name=\"Missing Info\", index=False)\n",
-    "        \n",
+    "        missing_combined_df.to_excel(writer, sheet_name=\"Missing Info\", index=False)        \n",
     "def build_hierarchy(enriched_file_path):\n",
     "    # Load enriched data\n",
     "    df = pd.read_excel(enriched_file_path, sheet_name=\"Enriched\")\n",
