--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -9,114 +9,63 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "def enrich_employee_data(monthly_csv_path, gha_file_path):\n",
-    "    # Load monthly employee data from CSV\n",
-    "    monthly_df = pd.read_csv(monthly_csv_path)\n",
-    "    gha_df = pd.read_excel(gha_file_path, sheet_name=\"Headcount – Employee Detail\")\n",
+    "# Column names (adjust if needed)\n",
+    "EMP_ID_COL = \"Employee ID\"\n",
+    "EMP_NAME_COL = \"Employee Name\"\n",
+    "MGR_ID_COL = \"Manager ID\"\n",
+    "MGR_NAME_COL = \"Manager Name\"\n",
+    "GCB_COL = \"GCB\"\n",
+    "MONTH_COL = \"Month\"\n",
     "\n",
-    "    # Standardize column names\n",
-    "    monthly_df.columns = monthly_df.columns.str.strip().str.lower()\n",
-    "    gha_df.columns = gha_df.columns.str.strip().str.lower()\n",
+    "def phase1(input_file, gha_file, output_file):\n",
+    "    \"\"\"\n",
+    "    Phase 1:\n",
+    "    - Load monthly input file and GHA master\n",
+    "    - Enrich employee records with manager details from GHA\n",
+    "    - Create two sheets:\n",
+    "        1. Enriched Data\n",
+    "        2. Missing Manager Data\n",
+    "    \"\"\"\n",
     "\n",
-    "    # Confirm correct column names\n",
-    "    emp_id_col = 'employee id'\n",
-    "    manager_id_col = 'entity manager employee id'\n",
-    "    band_col = 'global career band'\n",
+    "    # Load data\n",
+    "    df = pd.read_excel(input_file, sheet_name=0)\n",
+    "    gha = pd.read_excel(gha_file, sheet_name=0)\n",
     "\n",
-    "    # Deduplicate GHA data by Employee ID (keep last occurrence)\n",
-    "    gha_df = gha_df.drop_duplicates(subset=emp_id_col, keep='last')\n",
+    "    # Ensure column consistency\n",
+    "    gha = gha[[EMP_ID_COL, EMP_NAME_COL, GCB_COL, MGR_ID_COL, MGR_NAME_COL]]\n",
     "\n",
-    "    # Merge GHA info into monthly data\n",
-    "    enriched_df = monthly_df.merge(\n",
-    "        gha_df[[emp_id_col, 'employee name', manager_id_col, band_col, 'bf levels', 'email']],\n",
-    "        on=emp_id_col,\n",
-    "        how='left',\n",
-    "        suffixes=('', '_gha')\n",
+    "    # Merge to enrich\n",
+    "    enriched = df.merge(\n",
+    "        gha[[EMP_ID_COL, EMP_NAME_COL, GCB_COL]],\n",
+    "        how=\"left\",\n",
+    "        on=EMP_ID_COL,\n",
+    "        suffixes=(\"\", \"_GHA\"),\n",
     "    )\n",
     "\n",
-    "    # Identify missing employee info\n",
-    "    missing_employee_df = enriched_df[enriched_df[band_col].isna()].copy()\n",
-    "    missing_employee_df['missing_reason'] = 'Employee not found in GHA'\n",
+    "    # Add Manager ID & Name from GHA (lookup by employee’s Manager ID)\n",
+    "    enriched = enriched.merge(\n",
+    "        gha[[EMP_ID_COL, EMP_NAME_COL]],\n",
+    "        how=\"left\",\n",
+    "        left_on=MGR_ID_COL,\n",
+    "        right_on=EMP_ID_COL,\n",
+    "        suffixes=(\"\", \"_Manager\"),\n",
+    "    )\n",
     "\n",
-    "    # Check for missing manager info\n",
-    "    gha_ids = set(gha_df[emp_id_col])\n",
-    "    enriched_df['manager_missing'] = enriched_df[manager_id_col].apply(lambda x: pd.isna(x) or x not in gha_ids)\n",
+    "    enriched.rename(\n",
+    "        columns={\"Employee Name_Manager\": MGR_NAME_COL},\n",
+    "        inplace=True,\n",
+    "    )\n",
     "\n",
-    "    missing_manager_df = enriched_df[enriched_df['manager_missing']].copy()\n",
-    "    missing_manager_df['missing_reason'] = 'Manager not found in GHA'\n",
+    "    # Separate missing managers\n",
+    "    missing_mgr = enriched[enriched[MGR_NAME_COL].isna()].copy()\n",
     "\n",
-    "    # Combine all missing info\n",
-    "    missing_combined_df = pd.concat([missing_employee_df, missing_manager_df], ignore_index=True)\n",
+    "    # Write to Excel\n",
+    "    with pd.ExcelWriter(output_file, engine=\"openpyxl\") as writer:\n",
+    "        enriched.to_excel(writer, sheet_name=\"Enriched Data\", index=False)\n",
+    "        missing_mgr.to_excel(writer, sheet_name=\"Missing Managers\", index=False)\n",
     "\n",
-    "    # Save outputs\n",
-    "    with pd.ExcelWriter(\"phase1_enriched.xlsx\", engine='openpyxl') as writer:\n",
-    "        enriched_df.to_excel(writer, sheet_name=\"Enriched\", index=False)\n",
-    "        missing_combined_df.to_excel(writer, sheet_name=\"Missing Info\", index=False)        \n",
-    "def build_hierarchy(enriched_file_path):\n",
-    "    # Load enriched data\n",
-    "    df = pd.read_excel(enriched_file_path, sheet_name=\"Enriched\")\n",
-    "    df.columns = df.columns.str.strip().str.lower()\n",
-    "\n",
-    "    # Build lookup from deduplicated employee records\n",
-    "    gha_df = df.drop_duplicates(subset='employee id', keep='last')\n",
-    "    employee_lookup = gha_df.set_index('employee id').to_dict('index')\n",
-    "\n",
-    "    hierarchy = []\n",
-    "    missing_managers = []\n",
-    "\n",
-    "    def walk_hierarchy(manager_id, md_info):\n",
-    "        # Find employees reporting to this manager\n",
-    "        subordinates = df[df['entity manager employee id'] == manager_id]\n",
-    "        for _, row in subordinates.iterrows():\n",
-    "            emp_id = row['employee id']\n",
-    "            record = row.to_dict()\n",
-    "            record.update({\n",
-    "                'manager name': employee_lookup.get(manager_id, {}).get('employee name', 'Unknown'),\n",
-    "                'manager band': employee_lookup.get(manager_id, {}).get('global career band', 'Unknown'),\n",
-    "                'md id': md_info['employee id'],\n",
-    "                'md name': md_info['employee name']\n",
-    "            })\n",
-    "            hierarchy.append(record)\n",
-    "            walk_hierarchy(emp_id, md_info)\n",
-    "\n",
-    "    # Start from MDs\n",
-    "    md_df = gha_df[gha_df['global career band'].str.upper() == 'MD']\n",
-    "    for _, md in md_df.iterrows():\n",
-    "        md_record = md.to_dict()\n",
-    "        hierarchy.append(md_record)\n",
-    "        walk_hierarchy(md['employee id'], md_record)\n",
-    "\n",
-    "    # Handle missing manager chains\n",
-    "    for _, row in df.iterrows():\n",
-    "        emp_id = row['employee id']\n",
-    "        manager_id = row['entity manager employee id']\n",
-    "        visited = set()\n",
-    "        while manager_id in employee_lookup and manager_id not in visited:\n",
-    "            visited.add(manager_id)\n",
-    "            if employee_lookup[manager_id]['global career band'].upper() == 'MD':\n",
-    "                break\n",
-    "            manager_id = employee_lookup[manager_id]['entity manager employee id']\n",
-    "        else:\n",
-    "            missing_managers.append(row)\n",
-    "\n",
-    "    # Save outputs\n",
-    "    hierarchy_df = pd.DataFrame(hierarchy)\n",
-    "    missing_df = pd.DataFrame(missing_managers)\n",
-    "\n",
-    "    with pd.ExcelWriter(\"hierarchy_report.xlsx\", engine='openpyxl') as writer:\n",
-    "        hierarchy_df.to_excel(writer, sheet_name=\"Hierarchy Report\", index=False)\n",
-    "        missing_df.to_excel(writer, sheet_name=\"Missing Managers\", index=False)\n",
-    "        \n",
-    "        \n",
-    "# File paths\n",
-    "monthly_csv = \"monthly_employee.csv\"\n",
-    "gha_file = \"gha_master.xlsx\"\n",
-    "\n",
-    "# Phase 1: Enrichment\n",
-    "enrich_employee_data(monthly_csv, gha_file)\n",
-    "\n",
-    "# Phase 2: Hierarchy Build\n",
-    "build_hierarchy(\"phase1_enriched.xlsx\")"
+    "    print(f\"✅ Phase 1 complete → {output_file}\")\n",
+    "    return enriched, missing_mgr\n"
    ]
   },
   {
