--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -9,63 +9,51 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Column names (adjust if needed)\n",
-    "EMP_ID_COL = \"Employee ID\"\n",
-    "EMP_NAME_COL = \"Employee Name\"\n",
-    "MGR_ID_COL = \"Manager ID\"\n",
-    "MGR_NAME_COL = \"Manager Name\"\n",
-    "GCB_COL = \"GCB\"\n",
-    "MONTH_COL = \"Month\"\n",
+    "def enrich_monthly_data(monthly_csv_path, gha_excel_path):\n",
+    "    # Load monthly tracker CSV\n",
+    "    monthly_df = pd.read_csv(monthly_csv_path)\n",
+    "    \n",
+    "    # Load GHA master Excel sheet\n",
+    "    gha_df = pd.read_excel(gha_excel_path, sheet_name=\"Headcount Employee - Detail\")\n",
     "\n",
-    "def phase1(input_file, gha_file, output_file):\n",
-    "    \"\"\"\n",
-    "    Phase 1:\n",
-    "    - Load monthly input file and GHA master\n",
-    "    - Enrich employee records with manager details from GHA\n",
-    "    - Create two sheets:\n",
-    "        1. Enriched Data\n",
-    "        2. Missing Manager Data\n",
-    "    \"\"\"\n",
+    "    # Standardize column names\n",
+    "    monthly_df.columns = monthly_df.columns.str.strip().str.lower()\n",
+    "    gha_df.columns = gha_df.columns.str.strip().str.lower()\n",
     "\n",
-    "    # Load data\n",
-    "    df = pd.read_excel(input_file, sheet_name=0)\n",
-    "    gha = pd.read_excel(gha_file, sheet_name=0)\n",
+    "    # Deduplicate GHA data by Employee ID (keep last occurrence)\n",
+    "    gha_df = gha_df.drop_duplicates(subset='employee id', keep='last')\n",
     "\n",
-    "    # Ensure column consistency\n",
-    "    gha = gha[[EMP_ID_COL, EMP_NAME_COL, GCB_COL, MGR_ID_COL, MGR_NAME_COL]]\n",
+    "    # Define columns to bring from GHA\n",
+    "    gha_columns = [\n",
+    "        'employee id', 'global career band',\n",
+    "        'bf level 1 name', 'bf level 2 name', 'bf level 3 name',\n",
+    "        'bf level 4 name', 'bf level 5 name',\n",
+    "        'legal entity name', 'entity manager employee id', 'entity manager employee name'\n",
+    "    ]\n",
     "\n",
-    "    # Merge to enrich\n",
-    "    enriched = df.merge(\n",
-    "        gha[[EMP_ID_COL, EMP_NAME_COL, GCB_COL]],\n",
-    "        how=\"left\",\n",
-    "        on=EMP_ID_COL,\n",
-    "        suffixes=(\"\", \"_GHA\"),\n",
+    "    # Filter GHA to required columns\n",
+    "    gha_filtered = gha_df[gha_columns]\n",
+    "\n",
+    "    # Merge monthly data with GHA data\n",
+    "    enriched_df = monthly_df.merge(\n",
+    "        gha_filtered,\n",
+    "        on='employee id',\n",
+    "        how='left',\n",
+    "        suffixes=('', '_gha')\n",
     "    )\n",
     "\n",
-    "    # Add Manager ID & Name from GHA (lookup by employee’s Manager ID)\n",
-    "    enriched = enriched.merge(\n",
-    "        gha[[EMP_ID_COL, EMP_NAME_COL]],\n",
-    "        how=\"left\",\n",
-    "        left_on=MGR_ID_COL,\n",
-    "        right_on=EMP_ID_COL,\n",
-    "        suffixes=(\"\", \"_Manager\"),\n",
-    "    )\n",
+    "    # Identify rows where enrichment failed (missing GHA info)\n",
+    "    missing_mask = enriched_df['global career band'].isna()\n",
+    "    missing_df = enriched_df[missing_mask].copy()\n",
+    "    enriched_final_df = enriched_df.copy()  # Keep all rows, enriched where possible\n",
     "\n",
-    "    enriched.rename(\n",
-    "        columns={\"Employee Name_Manager\": MGR_NAME_COL},\n",
-    "        inplace=True,\n",
-    "    )\n",
+    "    # Save to Excel with two sheets\n",
+    "    with pd.ExcelWriter(\"phase1_enriched.xlsx\", engine='openpyxl') as writer:\n",
+    "        enriched_final_df.to_excel(writer, sheet_name=\"enriched_data\", index=False)\n",
+    "        missing_df.to_excel(writer, sheet_name=\"missing in gha\", index=False)\n",
     "\n",
-    "    # Separate missing managers\n",
-    "    missing_mgr = enriched[enriched[MGR_NAME_COL].isna()].copy()\n",
-    "\n",
-    "    # Write to Excel\n",
-    "    with pd.ExcelWriter(output_file, engine=\"openpyxl\") as writer:\n",
-    "        enriched.to_excel(writer, sheet_name=\"Enriched Data\", index=False)\n",
-    "        missing_mgr.to_excel(writer, sheet_name=\"Missing Managers\", index=False)\n",
-    "\n",
-    "    print(f\"✅ Phase 1 complete → {output_file}\")\n",
-    "    return enriched, missing_mgr\n"
+    "    print(\"✅ Phase 1 complete: 'phase1_enriched.xlsx' created with enriched and missing sheets.\")\n",
+    "enrich_monthly_data(\"Input/monthlysep.csv\", \"Input/gha_sep15.xlsx\")"
    ]
   },
   {
