--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,6 +3,92 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "31ca1077",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def build_hierarchy_view(enriched_file_path, gha_file_path):\n",
+    "    # Load enriched data\n",
+    "    enriched_df = pd.read_excel(enriched_file_path, sheet_name=\"enriched_data\")\n",
+    "    enriched_df.columns = enriched_df.columns.str.strip().str.lower()\n",
+    "\n",
+    "    # Load GHA data\n",
+    "    gha_df = pd.read_excel(gha_file_path, sheet_name=\"Headcount Employee - Detail\")\n",
+    "    gha_df.columns = gha_df.columns.str.strip().str.lower()\n",
+    "\n",
+    "    # Deduplicate GHA\n",
+    "    gha_df = gha_df.drop_duplicates(subset='employee id', keep='last')\n",
+    "\n",
+    "    # Build lookup dictionary\n",
+    "    gha_lookup = gha_df.set_index('employee id').to_dict('index')\n",
+    "\n",
+    "    # Identify MDs (for now, filter by name \"Muthu\")\n",
+    "    md_df = gha_df[gha_df['employee name'].str.strip().str.lower() == 'muthu']\n",
+    "    md_ids = set(md_df['employee id'])\n",
+    "\n",
+    "    hierarchy_records = []\n",
+    "    missing_chain_records = []\n",
+    "\n",
+    "    for _, row in enriched_df.iterrows():\n",
+    "        emp_id = row['employee id']\n",
+    "        current_mgr_id = row.get('entity manager employee id')\n",
+    "        visited = set()\n",
+    "        reached_md = False\n",
+    "        final_mgr_info = {}\n",
+    "\n",
+    "        while pd.notna(current_mgr_id) and current_mgr_id not in visited:\n",
+    "            visited.add(current_mgr_id)\n",
+    "            mgr_record = gha_lookup.get(current_mgr_id)\n",
+    "\n",
+    "            if mgr_record is None:\n",
+    "                # Manager missing in GHA\n",
+    "                missing_chain_records.append(row.to_dict())\n",
+    "                break\n",
+    "\n",
+    "            gcb = str(mgr_record.get('global career band', '')).strip().upper()\n",
+    "            final_mgr_info = {\n",
+    "                'entity manager employee id': current_mgr_id,\n",
+    "                'entity manager employee name': mgr_record.get('employee name', ''),\n",
+    "                'entity manager gcb': gcb\n",
+    "            }\n",
+    "\n",
+    "            if gcb == 'MD':\n",
+    "                if current_mgr_id in md_ids:\n",
+    "                    reached_md = True\n",
+    "                break\n",
+    "\n",
+    "            current_mgr_id = mgr_record.get('entity manager employee id')\n",
+    "\n",
+    "        if reached_md:\n",
+    "            enriched_row = row.to_dict()\n",
+    "            enriched_row.update({\n",
+    "                'md id': current_mgr_id,\n",
+    "                'md name': gha_lookup[current_mgr_id]['employee name'],\n",
+    "                'entity manager employee id': final_mgr_info['entity manager employee id'],\n",
+    "                'entity manager employee name': final_mgr_info['entity manager employee name'],\n",
+    "                'entity manager gcb': final_mgr_info['entity manager gcb']\n",
+    "            })\n",
+    "            hierarchy_records.append(enriched_row)\n",
+    "\n",
+    "    # Save to Excel\n",
+    "    hierarchy_df = pd.DataFrame(hierarchy_records)\n",
+    "    missing_df = pd.DataFrame(missing_chain_records)\n",
+    "\n",
+    "    with pd.ExcelWriter(\"phase2_hierarchy.xlsx\", engine='openpyxl') as writer:\n",
+    "        hierarchy_df.to_excel(writer, sheet_name=\"hierarchy report\", index=False)\n",
+    "        missing_df.to_excel(writer, sheet_name=\"missing mgr in gha\", index=False)\n",
+    "\n",
+    "    print(\"✅ Phase 2 complete: 'phase2_hierarchy.xlsx' created.\")\n",
+    "    \n",
+    "    \n",
+    "build_hierarchy_view(\"phase1_enriched.xlsx\", \"Input/gha_sep15.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "efb21b9f",
    "metadata": {},
    "outputs": [],
