--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31ca1077",
+   "id": "f330733e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,9 +24,13 @@
     "    # Build lookup dictionary\n",
     "    gha_lookup = gha_df.set_index('employee id').to_dict('index')\n",
     "\n",
-    "    # Identify MDs (for now, filter by name \"Muthu\")\n",
-    "    md_df = gha_df[gha_df['employee name'].str.strip().str.lower() == 'muthu']\n",
+    "    # Identify all MDs\n",
+    "    md_df = gha_df[gha_df['global career band'].str.strip().str.upper() == 'MD']\n",
     "    md_ids = set(md_df['employee id'])\n",
+    "\n",
+    "    # For now, isolate Muthu's ID\n",
+    "    muthu_df = md_df[md_df['employee name'].str.strip().str.lower() == 'muthu']\n",
+    "    muthu_id = muthu_df['employee id'].iloc[0] if not muthu_df.empty else None\n",
     "\n",
     "    hierarchy_records = []\n",
     "    missing_chain_records = []\n",
@@ -55,7 +59,7 @@
     "            }\n",
     "\n",
     "            if gcb == 'MD':\n",
-    "                if current_mgr_id in md_ids:\n",
+    "                if current_mgr_id == muthu_id:\n",
     "                    reached_md = True\n",
     "                break\n",
     "\n",
@@ -64,8 +68,8 @@
     "        if reached_md:\n",
     "            enriched_row = row.to_dict()\n",
     "            enriched_row.update({\n",
-    "                'md id': current_mgr_id,\n",
-    "                'md name': gha_lookup[current_mgr_id]['employee name'],\n",
+    "                'md id': muthu_id,\n",
+    "                'md name': gha_lookup[muthu_id]['employee name'],\n",
     "                'entity manager employee id': final_mgr_info['entity manager employee id'],\n",
     "                'entity manager employee name': final_mgr_info['entity manager employee name'],\n",
     "                'entity manager gcb': final_mgr_info['entity manager gcb']\n",
@@ -81,7 +85,6 @@
     "        missing_df.to_excel(writer, sheet_name=\"missing mgr in gha\", index=False)\n",
     "\n",
     "    print(\"✅ Phase 2 complete: 'phase2_hierarchy.xlsx' created.\")\n",
-    "    \n",
     "    \n",
     "build_hierarchy_view(\"phase1_enriched.xlsx\", \"Input/gha_sep15.xlsx\")"
    ]
