--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,13 +3,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f330733e",
+   "id": "63de3e78",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "def build_hierarchy_view(enriched_file_path, gha_file_path):\n",
+    "def build_hierarchy_to_muthu(enriched_file_path, gha_file_path):\n",
     "    # Load enriched data\n",
     "    enriched_df = pd.read_excel(enriched_file_path, sheet_name=\"enriched_data\")\n",
     "    enriched_df.columns = enriched_df.columns.str.strip().str.lower()\n",
@@ -24,13 +24,16 @@
     "    # Build lookup dictionary\n",
     "    gha_lookup = gha_df.set_index('employee id').to_dict('index')\n",
     "\n",
-    "    # Identify all MDs\n",
-    "    md_df = gha_df[gha_df['global career band'].str.strip().str.upper() == 'MD']\n",
-    "    md_ids = set(md_df['employee id'])\n",
-    "\n",
-    "    # For now, isolate Muthu's ID\n",
-    "    muthu_df = md_df[md_df['employee name'].str.strip().str.lower() == 'muthu']\n",
-    "    muthu_id = muthu_df['employee id'].iloc[0] if not muthu_df.empty else None\n",
+    "    # Identify Muthu's employee ID\n",
+    "    muthu_df = gha_df[\n",
+    "        (gha_df['global career band'].str.strip().str.upper() == 'MD') &\n",
+    "        (gha_df['employee name'].str.strip().str.lower() == 'muthu')\n",
+    "    ]\n",
+    "    if muthu_df.empty:\n",
+    "        print(\"❗ Muthu not found in GHA file.\")\n",
+    "        return\n",
+    "    muthu_id = muthu_df['employee id'].iloc[0]\n",
+    "    muthu_name = muthu_df['employee name'].iloc[0]\n",
     "\n",
     "    hierarchy_records = []\n",
     "    missing_chain_records = []\n",
@@ -39,42 +42,49 @@
     "        emp_id = row['employee id']\n",
     "        current_mgr_id = row.get('entity manager employee id')\n",
     "        visited = set()\n",
-    "        reached_md = False\n",
-    "        final_mgr_info = {}\n",
+    "        reached_muthu = False\n",
+    "        missing_mgr_id = None\n",
+    "        missing_mgr_name = None\n",
+    "\n",
+    "        # Capture immediate manager info from enriched row\n",
+    "        immediate_mgr_id = row.get('entity manager employee id')\n",
+    "        immediate_mgr_name = row.get('entity manager employee name')\n",
+    "        immediate_mgr_gcb = gha_lookup.get(immediate_mgr_id, {}).get('global career band', '')\n",
     "\n",
     "        while pd.notna(current_mgr_id) and current_mgr_id not in visited:\n",
     "            visited.add(current_mgr_id)\n",
     "            mgr_record = gha_lookup.get(current_mgr_id)\n",
     "\n",
     "            if mgr_record is None:\n",
-    "                # Manager missing in GHA\n",
-    "                missing_chain_records.append(row.to_dict())\n",
+    "                # First missing manager in chain\n",
+    "                missing_mgr_id = current_mgr_id\n",
+    "                missing_mgr_name = immediate_mgr_name if current_mgr_id == immediate_mgr_id else ''\n",
     "                break\n",
     "\n",
-    "            gcb = str(mgr_record.get('global career band', '')).strip().upper()\n",
-    "            final_mgr_info = {\n",
-    "                'entity manager employee id': current_mgr_id,\n",
-    "                'entity manager employee name': mgr_record.get('employee name', ''),\n",
-    "                'entity manager gcb': gcb\n",
-    "            }\n",
-    "\n",
-    "            if gcb == 'MD':\n",
-    "                if current_mgr_id == muthu_id:\n",
-    "                    reached_md = True\n",
+    "            if current_mgr_id == muthu_id:\n",
+    "                reached_muthu = True\n",
     "                break\n",
     "\n",
     "            current_mgr_id = mgr_record.get('entity manager employee id')\n",
     "\n",
-    "        if reached_md:\n",
+    "        if reached_muthu:\n",
     "            enriched_row = row.to_dict()\n",
     "            enriched_row.update({\n",
     "                'md id': muthu_id,\n",
-    "                'md name': gha_lookup[muthu_id]['employee name'],\n",
-    "                'entity manager employee id': final_mgr_info['entity manager employee id'],\n",
-    "                'entity manager employee name': final_mgr_info['entity manager employee name'],\n",
-    "                'entity manager gcb': final_mgr_info['entity manager gcb']\n",
+    "                'md name': muthu_name,\n",
+    "                'entity manager employee id': immediate_mgr_id,\n",
+    "                'entity manager employee name': immediate_mgr_name,\n",
+    "                'entity manager gcb': immediate_mgr_gcb\n",
     "            })\n",
     "            hierarchy_records.append(enriched_row)\n",
+    "        elif missing_mgr_id:\n",
+    "            missing_row = row.to_dict()\n",
+    "            missing_row.update({\n",
+    "                'missing manager id': missing_mgr_id,\n",
+    "                'missing manager name': missing_mgr_name,\n",
+    "                'missing reason': 'Manager not found in GHA'\n",
+    "            })\n",
+    "            missing_chain_records.append(missing_row)\n",
     "\n",
     "    # Save to Excel\n",
     "    hierarchy_df = pd.DataFrame(hierarchy_records)\n",
@@ -84,9 +94,7 @@
     "        hierarchy_df.to_excel(writer, sheet_name=\"hierarchy report\", index=False)\n",
     "        missing_df.to_excel(writer, sheet_name=\"missing mgr in gha\", index=False)\n",
     "\n",
-    "    print(\"✅ Phase 2 complete: 'phase2_hierarchy.xlsx' created.\")\n",
-    "    \n",
-    "build_hierarchy_view(\"phase1_enriched.xlsx\", \"Input/gha_sep15.xlsx\")"
+    "    print(\"✅ Phase 2 complete: 'phase2_hierarchy.xlsx' created.\")"
    ]
   },
   {
