--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -40,16 +40,15 @@
     "\n",
     "    for _, row in enriched_df.iterrows():\n",
     "        emp_id = row['employee id']\n",
-    "        current_mgr_id = row.get('entity manager employee id')\n",
+    "        immediate_mgr_id = row.get('entity manager employee id')\n",
+    "        immediate_mgr_name = row.get('entity manager employee name')\n",
+    "        immediate_mgr_gcb = gha_lookup.get(immediate_mgr_id, {}).get('global career band', '')\n",
+    "\n",
+    "        current_mgr_id = immediate_mgr_id\n",
     "        visited = set()\n",
     "        reached_muthu = False\n",
     "        missing_mgr_id = None\n",
     "        missing_mgr_name = None\n",
-    "\n",
-    "        # Capture immediate manager info from enriched row\n",
-    "        immediate_mgr_id = row.get('entity manager employee id')\n",
-    "        immediate_mgr_name = row.get('entity manager employee name')\n",
-    "        immediate_mgr_gcb = gha_lookup.get(immediate_mgr_id, {}).get('global career band', '')\n",
     "\n",
     "        while pd.notna(current_mgr_id) and current_mgr_id not in visited:\n",
     "            visited.add(current_mgr_id)\n",
@@ -58,7 +57,9 @@
     "            if mgr_record is None:\n",
     "                # First missing manager in chain\n",
     "                missing_mgr_id = current_mgr_id\n",
-    "                missing_mgr_name = immediate_mgr_name if current_mgr_id == immediate_mgr_id else ''\n",
+    "                missing_mgr_name = (\n",
+    "                    immediate_mgr_name if current_mgr_id == immediate_mgr_id else ''\n",
+    "                )\n",
     "                break\n",
     "\n",
     "            if current_mgr_id == muthu_id:\n",
