--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -21,8 +21,9 @@
     "    # Deduplicate GHA\n",
     "    gha_df = gha_df.drop_duplicates(subset='employee id', keep='last')\n",
     "\n",
-    "    # Build lookup dictionary\n",
+    "    # Build lookup dictionary and valid ID set\n",
     "    gha_lookup = gha_df.set_index('employee id').to_dict('index')\n",
+    "    valid_mgr_ids = set(gha_df['employee id'])\n",
     "\n",
     "    # Identify Muthu's employee ID\n",
     "    muthu_df = gha_df[\n",
@@ -40,21 +41,21 @@
     "\n",
     "    for _, row in enriched_df.iterrows():\n",
     "        emp_id = row['employee id']\n",
-    "        immediate_mgr_id = row.get('entity manager employee id')\n",
-    "        immediate_mgr_name = row.get('entity manager employee name')\n",
-    "        immediate_mgr_gcb = gha_lookup.get(immediate_mgr_id, {}).get('global career band', '')\n",
-    "\n",
-    "        current_mgr_id = immediate_mgr_id\n",
+    "        current_mgr_id = row.get('entity manager employee id')\n",
     "        visited = set()\n",
     "        reached_muthu = False\n",
     "        missing_mgr_id = None\n",
     "        missing_mgr_name = None\n",
     "\n",
+    "        # Capture immediate manager info from enriched row\n",
+    "        immediate_mgr_id = current_mgr_id\n",
+    "        immediate_mgr_name = row.get('entity manager employee name')\n",
+    "        immediate_mgr_gcb = gha_lookup.get(immediate_mgr_id, {}).get('global career band', '')\n",
+    "\n",
     "        while pd.notna(current_mgr_id) and current_mgr_id not in visited:\n",
     "            visited.add(current_mgr_id)\n",
-    "            mgr_record = gha_lookup.get(current_mgr_id)\n",
     "\n",
-    "            if mgr_record is None:\n",
+    "            if current_mgr_id not in valid_mgr_ids:\n",
     "                # First missing manager in chain\n",
     "                missing_mgr_id = current_mgr_id\n",
     "                missing_mgr_name = (\n",
@@ -66,7 +67,7 @@
     "                reached_muthu = True\n",
     "                break\n",
     "\n",
-    "            current_mgr_id = mgr_record.get('entity manager employee id')\n",
+    "            current_mgr_id = gha_lookup[current_mgr_id].get('entity manager employee id')\n",
     "\n",
     "        if reached_muthu:\n",
     "            enriched_row = row.to_dict()\n",
