--- a/Split_Tool.ipynb
+++ b/Split_Tool.ipynb
@@ -3,6 +3,85 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4fd60d3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for L2 handling\n",
+    "from openpyxl.worksheet.datavalidation import DataValidation\n",
+    "\n",
+    "def update_l2_l3_l4_dropdown(file_path: str, filename: str, ws_options, ws_l2, ws_l3, ws_l4):\n",
+    "    # Map headers to column letters\n",
+    "    header_map = {cell.value: cell.column_letter for cell in ws_options[1]}\n",
+    "    col_l2 = \"A\"\n",
+    "    col_l3 = header_map.get(\"Business Framework Group\", \"E\")\n",
+    "    col_l4 = header_map.get(\"Business Framework\", \"F\")\n",
+    "\n",
+    "    matched_l3 = []\n",
+    "    matched_l4 = []\n",
+    "\n",
+    "    # First pass: collect L3s for given L2\n",
+    "    for row in ws_options.iter_rows(min_row=2, max_row=ws_options.max_row):\n",
+    "        l2_val = row[ord(col_l2) - ord('A')].value\n",
+    "        l3_val = row[ord(col_l3) - ord('A')].value\n",
+    "        if l2_val and str(l2_val).strip() == filename:\n",
+    "            matched_l3.append(str(l3_val).strip())\n",
+    "\n",
+    "    # Second pass: collect L4s for matched L3s\n",
+    "    for row in ws_options.iter_rows(min_row=2, max_row=ws_options.max_row):\n",
+    "        l3_val = row[ord(col_l3) - ord('A')].value\n",
+    "        l4_val = row[ord(col_l4) - ord('A')].value\n",
+    "        if l3_val and str(l3_val).strip() in matched_l3:\n",
+    "            matched_l4.append(str(l4_val).strip())\n",
+    "\n",
+    "    if matched_l3 or matched_l4:\n",
+    "        # Clear dropdown columns\n",
+    "        for cell in ws_options[\"A\"][2:]:\n",
+    "            cell.value = None\n",
+    "        for cell in ws_options[\"B\"][2:]:\n",
+    "            cell.value = None\n",
+    "\n",
+    "        # Populate L2 dropdown values\n",
+    "        for i, val in enumerate(sorted(set(matched_l3)), start=3):\n",
+    "            ws_options[f\"A{i}\"] = val\n",
+    "\n",
+    "        # Populate L3 dropdown values\n",
+    "        for i, val in enumerate(sorted(set(matched_l4)), start=3):\n",
+    "            ws_options[f\"B{i}\"] = val\n",
+    "\n",
+    "        # Update L2 View!B1\n",
+    "        if ws_l2[\"B1\"].coordinate in ws_l2.merged_cells:\n",
+    "            ws_l2.unmerge_cells(\"B1:C1\")\n",
+    "        ws_l2.merge_cells(\"B1:C1\")\n",
+    "        ws_l2[\"B1\"] = filename\n",
+    "\n",
+    "        # Update L3 View!B1\n",
+    "        if ws_l3[\"B1\"].coordinate in ws_l3.merged_cells:\n",
+    "            ws_l3.unmerge_cells(\"B1:C1\")\n",
+    "        ws_l3.merge_cells(\"B1:C1\")\n",
+    "        ws_l3[\"B1\"] = filename\n",
+    "\n",
+    "        # Update L4 View!B1 with dropdown\n",
+    "        if ws_l4[\"B1\"].coordinate in ws_l4.merged_cells:\n",
+    "            ws_l4.unmerge_cells(\"B1:C1\")\n",
+    "        ws_l4.merge_cells(\"B1:C1\")\n",
+    "        ws_l4.data_validations.dataValidation.clear()\n",
+    "\n",
+    "        formula_range = f\"=Options!$B$2:$B${len(set(matched_l4))+2}\"\n",
+    "        dv = DataValidation(type=\"list\", formula1=formula_range, showDropDown=False)\n",
+    "        dv.error = \"Invalid selection.\"\n",
+    "        dv.prompt = \"Choose from dropdown\"\n",
+    "        ws_l4.add_data_validation(dv)\n",
+    "        dv.add(ws_l4[\"B1\"])\n",
+    "\n",
+    "        print(f\"✅ L2-L3-L4 dropdowns updated for: {file_path}\")\n",
+    "    else:\n",
+    "        print(f\"⚠️ No matching values for '{filename}' in {file_path} [L2 Split]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "217831a1",
    "metadata": {},
    "outputs": [],
