--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,6 +3,57 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2ecfae3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def flatten_monthly_data(enriched_file_path):\n",
+    "    # Load enriched data\n",
+    "    df = pd.read_excel(enriched_file_path, sheet_name=\"enriched_data\")\n",
+    "    df.columns = df.columns.str.strip().str.lower()\n",
+    "\n",
+    "    # Identify static columns (basic info)\n",
+    "    static_cols = [\n",
+    "        'employee id', 'employee name', 'entity manager employee id',\n",
+    "        'entity manager employee name', 'global career band'\n",
+    "    ]\n",
+    "\n",
+    "    # Identify dynamic columns\n",
+    "    dynamic_metrics = [\n",
+    "        'avg days at any office per week (with shrinkage)',\n",
+    "        'workstyle met?'\n",
+    "    ]\n",
+    "\n",
+    "    # Get unique months\n",
+    "    df['month'] = df['month'].str.strip()\n",
+    "    unique_months = sorted(df['month'].unique())\n",
+    "\n",
+    "    # Pivot the data\n",
+    "    pivot_df = df.pivot_table(\n",
+    "        index=static_cols,\n",
+    "        columns='month',\n",
+    "        values=dynamic_metrics,\n",
+    "        aggfunc='first'\n",
+    "    )\n",
+    "\n",
+    "    # Flatten multi-index columns\n",
+    "    pivot_df.columns = [\n",
+    "        f\"{month} {metric.lower().replace(' ', '_')}\"\n",
+    "        for metric, month in pivot_df.columns\n",
+    "    ]\n",
+    "    pivot_df.reset_index(inplace=True)\n",
+    "\n",
+    "    # Save to Excel\n",
+    "    pivot_df.to_excel(\"phase2_flattened.xlsx\", sheet_name=\"flattened\", index=False)\n",
+    "    print(f\"✅ Flattened file created with {len(unique_months)} months → {len(pivot_df.columns)} columns.\")\n",
+    "    flatten_monthly_data(\"phase1_enriched.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "63de3e78",
    "metadata": {},
    "outputs": [],
