--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ecfae3b",
+   "id": "9cecf7bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,29 +14,37 @@
     "    df = pd.read_excel(enriched_file_path, sheet_name=\"enriched_data\")\n",
     "    df.columns = df.columns.str.strip().str.lower()\n",
     "\n",
-    "    # Identify static columns (basic info)\n",
+    "    # Static columns\n",
     "    static_cols = [\n",
     "        'employee id', 'employee name', 'entity manager employee id',\n",
     "        'entity manager employee name', 'global career band'\n",
     "    ]\n",
     "\n",
-    "    # Identify dynamic columns\n",
+    "    # Dynamic metrics\n",
     "    dynamic_metrics = [\n",
     "        'avg days at any office per week (with shrinkage)',\n",
     "        'workstyle met?'\n",
     "    ]\n",
     "\n",
-    "    # Get unique months\n",
+    "    # Convert month to datetime for sorting\n",
     "    df['month'] = df['month'].str.strip()\n",
-    "    unique_months = sorted(df['month'].unique())\n",
+    "    df['month_dt'] = pd.to_datetime(df['month'], format='%b-%y')\n",
+    "    df = df.sort_values('month_dt')\n",
     "\n",
-    "    # Pivot the data\n",
+    "    # Create a mapping from datetime back to original string\n",
+    "    month_order = df[['month', 'month_dt']].drop_duplicates().sort_values('month_dt')\n",
+    "    ordered_months = month_order['month'].tolist()\n",
+    "\n",
+    "    # Pivot\n",
     "    pivot_df = df.pivot_table(\n",
     "        index=static_cols,\n",
     "        columns='month',\n",
     "        values=dynamic_metrics,\n",
     "        aggfunc='first'\n",
     "    )\n",
+    "\n",
+    "    # Reorder columns by sorted month\n",
+    "    pivot_df = pivot_df.reindex(columns=ordered_months, level=1)\n",
     "\n",
     "    # Flatten multi-index columns\n",
     "    pivot_df.columns = [\n",
@@ -47,8 +55,7 @@
     "\n",
     "    # Save to Excel\n",
     "    pivot_df.to_excel(\"phase2_flattened.xlsx\", sheet_name=\"flattened\", index=False)\n",
-    "    print(f\"✅ Flattened file created with {len(unique_months)} months → {len(pivot_df.columns)} columns.\")\n",
-    "    flatten_monthly_data(\"phase1_enriched.xlsx\")"
+    "    print(f\"✅ Flattened file created with months ordered chronologically.\")flatten_monthly_data(\"phase1_enriched.xlsx\")"
    ]
   },
   {
